# NeuralNetDev

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: MANIFEST.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MANIFEST.md  ROADMAP.md  SEISBENCH_PLAYGROUND.md
notebooks/: MANIFEST.md  seisbench_demo.ipynb
scripts/: bootstrap.sh
src/seismo_nn/: MANIFEST.md  __init__.py  config.py  evaluation.py  models.py  pipeline.py  seisbench.py  tasks.py  training.py
tests/: MANIFEST.md  test_contracts.py  test_import.py  test_seisbench.py
