[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "seismo-nn"
version = "0.1.0"
description = "Seismology neural network development scaffold."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Your Name" },
]
dependencies = [
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pre-commit>=4.2",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.11",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/seismo_nn"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=seismo_nn --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "C4",
  "ARG",
  "PIE",
  "RUF",
]
ignore = [
  "ARG001",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
mypy_path = "src"

[dependency-groups]
dev = [
  "mypy>=1.15",
  "pre-commit>=4.2",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.11",
]
