[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "seismo-nn"
version = "0.1.0"
description = "Seismology neural network development scaffold."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Stefan Kildal-Brandt" },
]
dependencies = [
  "matplotlib>=3.10.8",
  "numpy>=2.0",
  "obspy>=1.5.0",
  "pandas>=3.0.2",
  "scipy>=1.17.1",
  "seisbench>=0.11.5",
  "torch>=2.11.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pre-commit>=4.2",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.11",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/seismo_nn"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=seismo_nn --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "C4",
  "ARG",
  "PIE",
  "RUF",
]
ignore = [
  "ARG001",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["pandas", "seisbench", "seisbench.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
  "ipykernel>=7.2.0",
  "jupyter>=1.1.1",
  "mypy>=1.15",
  "pre-commit>=4.2",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.11",
]
